# ultimate_analytics

./: .gitignore  LICENSE  Makefile  README.md  requirements-dev.txt  requirements.txt  ruff.toml  setup.py
docs/: Makefile  conf.py  (+4 more)
ultimate-pipeline/: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  stats.json  ultimate-detect.yaml
ultimate-pipeline/conf/base/: catalog.yml  parameters_data_processing.yml  ultimate_detect.yml  ultimate_keypoints.yml
ultimate-pipeline/notebooks/: data_processing.ipynb
ultimate-pipeline/notebooks/keypoints/: edge_detection.ipynb  homography.ipynb  keypoints.org  keypoints_filter.py  keypoints_pred_analysis.ipynb
ultimate-pipeline/prototype_team_detection/: embedding_team_detection.ipynb  img2vec.py
ultimate-pipeline/src/tests/: test_supervisely_converter.py
ultimate-pipeline/src/tests/data/supervisely/sample_images_1/: meta.json
ultimate-pipeline/src/tests/data/supervisely/sample_images_1/test/ann/: sockeye_vs_rhino_slam_pool_004.mp4_00000.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00002.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00003.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00005.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00006.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00007.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00009.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00011.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00012.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00013.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00015.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00016.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00018.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00019.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00020.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00021.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00022.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00023.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00025.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00026.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00027.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00028.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00029.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00030.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00031.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00032.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00033.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00034.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00035.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00036.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00038.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00039.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00041.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00043.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00044.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00045.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00046.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00047.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00048.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00049.jpg.json  (+34 more)
ultimate-pipeline/src/tests/data/supervisely/sample_images_1/test/meta/: sockeye_vs_rhino_slam_pool_004.mp4_00000.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00001.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00002.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00003.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00004.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00005.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00006.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00007.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00008.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00009.jpg.json  sockeye_vs_rhino_slam_pool_004.mp4_00011.jpg.json  (+74 more)
ultimate-pipeline/src/tests/data/supervisely/sample_images_2/: meta.json
ultimate-pipeline/src/tests/data/supervisely/sample_video_1/: key_id_map.json  meta.json
ultimate-pipeline/src/tests/data/supervisely/sample_video_2/annotations/: sockeye_vs_rhino_slam_pool_004.json
ultimate-pipeline/src/ultimate_pipeline/: __init__.py  __main__.py  settings.py
ultimate-pipeline/src/ultimate_pipeline/pipelines/data_processing/: keypoints_filter.py  nodes.py  pipeline.py  supervisely_converter.py  supervisely_downloader.py
(+135 files in other folders)
