[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate_pipeline"
readme = "README.md"
dynamic = [ "dependencies", "optional-dependencies", "version" ]

[project.scripts]
ultimate-pipeline = "ultimate_pipeline.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.dynamic.version]
attr = "ultimate_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro]
package_name = "ultimate_pipeline"
project_name = "ultimate_pipeline"
kedro_init_version = "0.19.3"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -W ignore::DeprecationWarning"
testpaths = [
    "src/tests"
]

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]