[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "ultimate_pipeline"
readme = "README.md"
dynamic = [ "dependencies", "optional-dependencies", "version" ]

[project.scripts]
ultimate-pipeline = "ultimate_pipeline.__main__:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.dynamic.version]
attr = "ultimate_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro]
package_name = "ultimate_pipeline"
project_name = "ultimate_pipeline"
kedro_init_version = "0.19.3"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -W ignore::DeprecationWarning"
testpaths = [
    "src/tests"
]
